# dio-desafio-workout-api

./: Makefile  README.md  README_EXEMPLO.md  docker-compose.yaml  gerar_projeto.py  pyproject.toml
alembic/: env.py
alembic/versions/: 375a8ed3e282_init_db.py  38917fd59ea3_init_db.py  b30437cf8423_init_db.py
dio-desafio-workout-api/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dio-desafio-workout-api/src/api/controllers/: atleta_controller.py
dio-desafio-workout-api/src/api/routers/: atletas.py
dio-desafio-workout-api/src/app/: factory.py  main.py
dio-desafio-workout-api/src/configs/: settings.py
dio-desafio-workout-api/src/core/: database.py
dio-desafio-workout-api/src/models/: atleta.py  base.py
dio-desafio-workout-api/src/repositories/: atleta_repository.py
dio-desafio-workout-api/src/schemas/: atleta.py
src/: dependencies.py  main.py
src/api/: dependencies.py
src/api/controllers/: atleta.py  categoria.py  centro_treinamento.py
src/api/routers/: routers.py
src/app/: main.py
src/configs/: database.py
src/controllers/: __init__.py  atleta.py  categoria.py  centro_treinamento.py
src/models/: __init_.py  atleta.py  base.py  categorias.py  centro_treinamento.py
src/routers/: __init_.py  atletas.py  categorias.py  centro_treinamento.py
src/schemas/: atleta.py  categorias.py  centro_treinamento.py  centros_treinamento.py
