[tool.poetry]
name = "dio-desafio-workout-api"
version = "0.1.0"
description = "API de gerenciamento de atletas, categorias e centros de treinamento."
authors = ["Seu Nome <email@exemplo.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.0"
pydantic-settings = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
